src/components/molecules/headerHomePage/header.css
header {
    display: flex;
    flex-wrap: wrap;
    width: 100vw;
    max-width: 100vw;
    font-family: 'Poppins', sans-serif;
    /* background: linear-gradient(to bottom, #06cdec, rgba(30, 12, 157, 0.4));
    opacity: .75; */
}

.header-main-container {
    display: flex;
    width: 100%;
    justify-content: center;
    background: linear-gradient(to bottom, #06cdec, rgba(30, 12, 157, 0.4));
    opacity: .75;
    position: relative;
    z-index: 2;
}

.header-container {
    max-width: 50%;
    margin-top: 3.75rem;
    margin-bottom: 8rem;
}

.info-header-container {
    display: flex;
    flex-direction: column;
    align-items: start;
    padding-right: 1rem;
    padding-left: 1rem;
    border: 2px solid rgb(255, 153, 1);
}

h2 {
    color: #121158;
    font-weight: bolder;
    font-size: 3.25rem;
    letter-spacing: 1px;
    margin-bottom: 1.25rem;
}

p {
    color: #515184;
    font-size: 1rem;
    margin-bottom: 1rem;
}

button {
    color: #fff;
    background-color: #121158;
    margin-bottom: 1.875rem;
    padding: 1.25rem 3.125rem;
    font-weight: 600;
    font-size: 0.75rem;
    letter-spacing: 1px;
    border-radius: 30px;
}

.image-header-container {
    padding-right: 1rem;
    padding-left: 1rem;
    /* border: 2px solid rgb(208, 255, 1); */
}

img {
    width: 100%;
}

.header-secondary-container {
    width: 100%;
    position: relative;
    top: -65px;
}

.header-brand-container {
    display: flex;
    width: 80%;
    padding: 1.25rem;
    margin: auto;
    /* position: absolute; */
    border-radius: 5px;
    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
    background-color: #ffffff;   
}

.brand-container {
    background-color: #ffffff;
    margin: 0px 60px 5px;
    max-width: 100%;
}

