Update header styles (problem with opacity and z-index solved)

--- a/src/components/molecules/headerHomePage/header.css
+++ b/src/components/molecules/headerHomePage/header.css
@@ -4,8 +4,6 @@ header {
     width: 100vw;
     max-width: 100vw;
     font-family: 'Poppins', sans-serif;
-    /* background: linear-gradient(to bottom, #06cdec, rgba(30, 12, 157, 0.4));
-    opacity: .75; */
 }
 
 .header-main-container {
@@ -13,24 +11,28 @@ header {
     width: 100%;
     justify-content: center;
     background: linear-gradient(to bottom, #06cdec, rgba(30, 12, 157, 0.4));
-    opacity: .75;
-    position: relative;
-    z-index: 2;
+    /* padding: 0rem 5rem 0rem 5rem; */
 }
 
 .header-container {
-    max-width: 50%;
+    width: 90%;
     margin-top: 3.75rem;
     margin-bottom: 8rem;
+    display: flex;
+    /* justify-content: center; */
+
+    border: 2px solid rgb(255, 255, 255);
 }
 
 .info-header-container {
     display: flex;
     flex-direction: column;
     align-items: start;
+    width: 50%;
     padding-right: 1rem;
     padding-left: 1rem;
     border: 2px solid rgb(255, 153, 1);
+   
 }
 
 h2 {
@@ -61,11 +63,15 @@ button {
 .image-header-container {
     padding-right: 1rem;
     padding-left: 1rem;
-    /* border: 2px solid rgb(208, 255, 1); */
+    width: 50%;
+    border: 2px solid rgb(248, 48, 252);
+    display: flex;
+    justify-content: center;
 }
 
-img {
-    width: 100%;
+.image-header-container img {
+    width: 65%;
+    height: auto;
 }
 
 .header-secondary-container {
@@ -76,17 +82,17 @@ img {
 
 .header-brand-container {
     display: flex;
-    width: 80%;
-    padding: 1.25rem;
+    width: 90%;
     margin: auto;
-    /* position: absolute; */
+    padding: 1.25rem;
+    z-index: 1; 
+    gap: 4rem;
+    justify-content: center;
     border-radius: 5px;
+    background-color: #ffffff;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
-    background-color: #ffffff;   
 }
 
 .brand-container {
-    background-color: #ffffff;
-    margin: 0px 60px 5px;
-    max-width: 100%;
+    width: 100%;
 }
